@@ -1,11 +1,15 @@
+SVN
+* Added migrations and configuration files to speedbar.
+* More shortcuts for tests.
+
 0.5.99.5
-* Improved `align` support in `ruby-mode`
-* Fixed bug [#10613]: Wrong comparison of emacs-major-version
-* Apply patch [#10532]: allows '-' to occur in the errror filepath (thanks Peter Williams)
+* Improved `align` support in `ruby-mode`.
+* Fixed bug [#10613]: Wrong comparison of emacs-major-version.
+* Apply patch [#10532]: allows '-' to occur in the errror filepath (thanks Peter Williams).
 * Fixed bug [#10417]: ruby-flymake had applying only if flymake is
   available.
-* Raise a error if emacs-rails run on old version of Emacs (less 22)
-* Updated view mode of "views"
+* Raise a error if emacs-rails run on old version of Emacs (less 22).
+* Updated view mode of "views".
 * Fixed bug [#10357]: code expansion shouldn't occur in comment lines.
 
 0.5.99.4
