@@ -1,4 +1,16 @@
+2007-08-11  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-compat.el (try-complete-abbrev): fixed
+
+	* rails-core.el (rails-core:configuration-file, :rails-core:configuration-files): created functions
+
+	* rails-speedbar-feature.el (rails-speedbar:roots): added
+	migrations and configuration files to speedbar
+
 2007-08-05  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-test.el, rails-ui.el: apply patch #11998, created additional key
+	shortcuts (thanks Tom Ten Thij)
 
 	* rails-compat.el: apply patch #12743, replace
 	`indent-or-complete` to `indent-and-complete` (thanks Peter Williams)
